dataset1235/2025-2/805158916/users/1147723658/executions/1584167357_593159971.log
== SUBMISSION (2025-08-27 14:55:42)
-- CODE: 
nota1 = float(input("Digite um numero"))
nota2 = float(input("Digite um numero"))
nota3 = float(input("Digite um numero"))
media = (nota1 + nota2 + notas3) / 3
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:55:45)
-- CODE: 
nota1 = float(input("Digite um numero"))
nota2 = float(input("Digite um numero"))
nota3 = float(input("Digite um numero"))
media = (nota1 + nota2 + notas3) / 3
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = (nota1 + nota2 + notas3) / 3
                             ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:54:46)
-- CODE: 
nota1 = float(input("Digite um numero:"))
nota2 = float(input("Digite um numero:"))
nota3 = float(input(""Digite um numero:))
media = (nota1 + nota2 + notas3) / 3
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
-- ERROR:
File "XXXX", line 3
    nota3 = float(input(""Digite um numero:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
-- ERROR:
File "XXXX", line 3
    nota3 = float(input(""Digite um numero:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
-- ERROR:
File "XXXX", line 3
    nota3 = float(input(""Digite um numero:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
-- ERROR:
File "XXXX", line 3
    nota3 = float(input(""Digite um numero:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
-- ERROR:
File "XXXX", line 3
    nota3 = float(input(""Digite um numero:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
-- ERROR:
File "XXXX", line 3
    nota3 = float(input(""Digite um numero:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:57:29)
-- CODE: 
nota1 = float(input("Digite um Número"))
nota2 = float(input("Digite um Número"))
nota3 = float(input("Digite um Número"))
media = (nota1 + nota2 + nota3) / 3
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
Digite um NúmeroDigite um NúmeroDigite um Número6.2
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
Digite um NúmeroDigite um NúmeroDigite um Número8.3
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
Digite um NúmeroDigite um NúmeroDigite um Número5.5
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
Digite um NúmeroDigite um NúmeroDigite um Número2.0
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
Digite um NúmeroDigite um NúmeroDigite um Número9.1
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
Digite um NúmeroDigite um NúmeroDigite um Número3.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
